--- a/WindBellDithering/WindBellDithering.csproj
+++ b/WindBellDithering/WindBellDithering.csproj
@@ -72,6 +72,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="references\GH_IO.dll" />
+    <Content Include="references\Grasshopper.dll" />
+    <Content Include="references\RhinoCommon.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
